Adding comments in code

--- a/exercicios/number-month-date-time/index.html
+++ b/exercicios/number-month-date-time/index.html
@@ -18,6 +18,11 @@
         <p> <!-- Nota -->
             <label for="fornumero">Nota</label>
             <input type="number" name="numero" id="fornumero" required step="0.1" max="10" min="0" value="0"> 
+
+            <!-- required = Preenchimento obrigatorio -->
+            <!-- step = O quanto eu determino que pulem os números -->
+            <!-- max / Min = O máximo e o mínimo que eu quero setar de limite de número -->
+            <!-- value = Valor pre definido -->
         </p>
 
         <p> <!-- Periodo -->
