Add checkbox e radio

--- a/exercicios/tel-email/index.html
+++ b/exercicios/tel-email/index.html
@@ -17,7 +17,7 @@
 
             <p> <!-- Nome -->
                 <label for="fornome">Nome</label>
-                <input type="text" name="nome" id="fornome" placeholder="Nome Completo" required maxlength="30">
+                <input type="text" name="nome" id="fornome" placeholder="Nome Completo" required maxlength="30" autocomplete="off">
             </p>
 
             <p> <!-- E-mail -->
